# simplnx

src/Plugins/ComplexCore/: CMakeLists.txt
src/Plugins/ComplexCore/src/ComplexCore/Filters/: RegularGridSampleSurfaceMeshFilter.cpp
src/Plugins/ComplexCore/src/ComplexCore/Filters/Algorithms/: RegularGridSampleSurfaceMesh.cpp  RegularGridSampleSurfaceMesh.hpp
src/Plugins/ComplexCore/src/ComplexCore/WindingNumber/: CMakeLists.txt  UT_BVHImpl.h  UT_SolidAngle.cpp  VM_SIMD.h  VM_SIMDFunc.h  VM_SSEFunc.h  main.cpp
src/Plugins/ComplexCore/test/: CMakeLists.txt  WindingNumberTest.cpp  WindingNumberTestPerFeature.cpp
src/complex/Utilities/: SampleSurfaceMesh.cpp  SamplingUtils.hpp
wrapping/python/plugins/PyITKImageProcessing/: Plugin.py  __init__.py
